--- a/.gitignore
+++ b/.gitignore
@@ -197,3 +197,6 @@ hs_err_pid*
 .idea/modules.xml
 .idea/misc.xml
 
+/resources/apache-log4j-2.12.1-bin/LICENSE.txt
+/resources/apache-log4j-2.12.1-bin/NOTICE.txt
+/resources/apache-log4j-2.12.1-bin/RELEASE-NOTES.md
