--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,21 +1,27 @@
-# Define the root logger with appender file
-log4j.rootLogger = DEBUG, FILE
+# Root logger option
 
-# Define the file appender
-log4j.appender.FILE=org.apache.log4j.FileAppender
+log4j.rootLogger=ALL, file, stdout
 
-# Set the name of the file
-log4j.appender.FILE.File=${log}/log.out
+# configuration to print into file
 
-# Set the immediate flush to true (default)
-log4j.appender.FILE.ImmediateFlush=true
+log4j.appender.file=org.apache.log4j.RollingFileAppender
 
-# Set the threshold to debug mode
-log4j.appender.FILE.Threshold=debug
+log4j.appender.file.File=D:\\log\\logging.log
 
-# Set the append to false, overwrite
-log4j.appender.FILE.Append=false
+log4j.appender.file.MaxFileSize=12MB
 
-# Define the layout for file appender
-log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
-log4j.appender.FILE.layout.conversionPattern=%m%n
+log4j.appender.file.MaxBackupIndex=10
+
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+
+log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# configuration to print on console
+
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+
+log4j.appender.stdout.Target=System.out
+
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+
+log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
