--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				 <version>3.8.1</version>
 				<configuration>
-					<source>6</source>
-					<target>6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -58,5 +58,11 @@
 			<version>5.5.2</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+    <groupId>org.junit.platform</groupId>
+    <artifactId>junit-platform-runner</artifactId>
+    <version>1.5.2</version>
+    <scope>test</scope>
+</dependency>
 	</dependencies>
 </project>
